--- a/PS4/views/ps4.pug
+++ b/PS4/views/ps4.pug
@@ -5,3 +5,4 @@ block content
     p The longitude is: #{longitude}
     p The latitude is: #{latitude}
     p The temperature is: #{temperature}
+    p The forecast is: #{forecast}
